Drop minimum supported Java version to 11